JS Fragments and device detection

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,3 +1,9 @@
+//
 // main.scss
 
-$font-family: 'HelveticaLTStd-Roman', sans-serif;
+@import "variables";
+@import "normalize";
+
+body, html {
+    font-family: $font-family;
+}
